--- a/src/date-picker/index.css
+++ b/src/date-picker/index.css
@@ -31,6 +31,7 @@
 }
 
 .x-date-picker-header {
+  box-sizing: border-box;
   display: flex;
   justify-content: flex-end;
   align-items: center;
