--- a/src/pop-menu/styles/pop-menu.css
+++ b/src/pop-menu/styles/pop-menu.css
@@ -9,6 +9,7 @@
   }
 
   &__group {
+    box-sizing: border-box;
     display: flex;
     align-items: center;
     padding: 10px 12px 6px;
