--- a/src/pop/index.css
+++ b/src/pop/index.css
@@ -10,7 +10,7 @@
     position: absolute;
     display: none;
     opacity: 0;
-    z-index: 999;
+    z-index: 1099;
     transition: all .2s;
   }
 
