--- a/src/radio/styles/radio.css
+++ b/src/radio/styles/radio.css
@@ -5,9 +5,10 @@
   cursor: pointer;
 
   &__indicator {
+    box-sizing: border-box;
     position: relative;
-    width: 16px;
-    height: 16px;
+    width: 18px;
+    height: 18px;
     border: 1px solid var(--border-color);
     border-radius: 50%;
     transition: all .2s;
