--- a/src/toast/index.css
+++ b/src/toast/index.css
@@ -2,7 +2,7 @@
 
 #x-toast-root {
   position: fixed;
-  z-index: 10000;
+  z-index: 9999;
   top: 20px;
   left: 50%;
   transform: translateX(-50%);
